--- a/dir.conf
+++ b/dir.conf
@@ -1,5 +1,5 @@
 <IfModule mod_dir.c>
-    DirectoryIndex login.php index.cgi index.pl index.php index.xhtml 
+    DirectoryIndex login.php index.cgi index.pl index.php 
 </IfModule>
 
  
